@@ -1,0 +1,3 @@
+endpoint	0.1	0.1	0.1	0.1	0.1	0.1	0.1	0.1	0.1	0.1	0.1	0.1	2.4	2.4	2.4	2.4	2.4	2.4	3.8	3.8	6.2	6.2	10.1	10.1	16.5	16.5	16.5	16.5	16.5	16.5	26.8	26.8	43.5	43.5	70.7	70.7
+growth	4.05405	-3.86402	-0.40118	0.21115	4.78474	-0.28645	-1.9627	-2.53559	8.21172	-4.63598	-1.64234	-1.93339	-7.98142	7.33857	3.34705	-2.55707	-8.68987	-11.48974	1.41102	-10.9375	-4.08453	-12.98564	2.45072	-3.71622	27.30152	29.05854	17.60842	14.03268	18.95971	16.65211	64.81147	58.3826	77.06083	72.71959	72.94341	81.89225
+photosynthesis	0	0	0	0	0	0	0	0	0	0	0	0	-7.18853	-4.50187	-8.42766	-5.63618	-11.4767	-6.96251	-7.53671	-8.01109	-6.37088	-8.79645	-7.67328	-7.28024	-6.78936	-12.60403	-5.77177	-5.86055	-18.67683	-14.58052	-5.76963	5.8997	22.0856	19.35689	21.28191	35.7986
