@@ -10,6 +10,8 @@ the use of AIC or BIC for the best fit model selection process.
 - Add of the possibility to enter data as an R object of class data.frame
 - Add of published datasets (Zhou et al. 2017, Larras etal. 2020) and 
 corresponding help pages
+- Add of function continuousanchoringdata and modification of itemselect()
+to enable the selection of significant responses on continuous anchoring data.
 
 
 Version 2.0-1 
